[package]
name = "tiny-hderive"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"
description = "Tiny BIP44/BIP32 derivation for BIP39 seeds"
documentation = "https://docs.rs/tiny-hderive"
homepage = "https://github.com/maciejhirsz/tiny-hderive"
repository = "https://github.com/maciejhirsz/tiny-hderive"
keywords = ["bitcoin", "ethereum", "bip32", "bip39", "bip44"]

[dependencies]
k256 = "0.13"
base58 = "0.2"
sha2 = "0.10"
hmac = "0.12"
memzero = "0.1"

[dev-dependencies]
ethsign = { version = "0.9", default-features = false, features = ["pure-rust"] }
tiny-bip39 = "1.0"
